force-app/main/default/objects/Opportunity_Goal__c/Opportunity_Goal__c.object-meta.xml
<CustomObject>
    <description>Junction object bringing together Opportunities and custom object Goal. Goal is used by G100 to compare Opportunities and pipeline to annual growth and performance goals. Primarily used in Reports and Dashboards.</description>
    <label>Opportunity-Goal</label>
    <nameField>
        <displayFormat>OG-{0000}</displayFormat>
        <label>Opportunity-Goal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity-Goal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>