force-app/main/default/objects/Opportunity_Goal__c/fields/Membership_Type_Price__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type_Price__c</fullName>
    <formula>TEXT(Opportunity__r.Membership_Type__c)</formula>
    <label>Membership Type/Price</label>
    <type>Text</type>
</CustomField>