force-app/main/default/objects/Opportunity_Goal__c/fields/Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Sub_Group__c</fullName>
    <formula>TEXT(Opportunity__r.SubGroup__c)</formula>
    <label>Sub Group</label>
    <type>Text</type>
</CustomField>